Fixes SideNavigation collapse transition

--- a/src/components/Navigation/SideNavigation/SideNavigation.scss
+++ b/src/components/Navigation/SideNavigation/SideNavigation.scss
@@ -222,6 +222,7 @@
       margin: 0 auto;
       padding: 0.5rem 1rem;
       border-radius: 0.125rem;
+      transition: padding 0.05s ease-in-out;
     }
     &:hover {
       background-color: $gray-03;
